--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
 		<div class = "OBI-WAN">
 			<p id="obi-wan_name">Obi-Wan Kenobi</p>
 			<img id="Obi-Wan-Image" src="assets/images/Obi-Wan.jpg">
-			<p id="obi-wan_health_points">Obi-Wan Kenobi Health</p>
+			<p id="obi-wan_health_points">120</p>
 		</div>
 
 		<div class="luke_Skywalker">
 			<p id="lukeskywalker_name">Luke Skywalker</p>
 			<img id="lukeskywalker-Image" src="assets/images/lukeskywalker.jpg">
-			<p id="lukeskywalker_health_points">Luke Skywalker Health</p>
+			<p id="lukeskywalker_health_points">100</p>
 		</div>
 
 		<div class="darth_sidious">
 			<p id="darth_sidious_name">Darth Sidious</p>
 			<img id="darth_sidious-Image" src="assets/images/darth_sidious.png">
-			<p id="darth_sidious_health_points">Darth Sidious Health</p>
+			<p id="darth_sidious_health_points">150</p>
 		</div>
 		
 		<div class="darth_maul">
 			<p id="darth_maul_name">Darth Maul</p>
 			<img id="darth_maul-Image" src="assets/images/darth_maul.jpeg">
-			<p id="darth_maul_health_points">Darth Maul Health</p>
+			<p id="darth_maul_health_points">180</p>
 		</div>
 	
 	</div>
@@ -62,7 +62,16 @@
 
 		<div class="fight">
 			<p id="fight_selection">Fight Selection</p>
-			<button type="button">Attack!</button>
+			<button id="button" type="button">Attack!</button>
+		</div>
+
+		<div class="defender">
+			<p id="defender_text">Defender</p>
+
+		</div>
+
+		<div class="results">
+			<p id="result_statement"></p>
 		</div>
 
 	<script src ="assets/javascript/game.js"></script>
