--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		<div class="fight">
 			<p id="fight_selection">Fight Selection</p>
 			<button id="button" type="button">Attack!</button>
+			<button id="button_reset" type="button">Reset</button>
 		</div>
 
 		<div class="defender">
